# sockit

./: .gitignore  LICENSE.md  LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
sockit/: __init__.py  __main__.py  main.py
sockit/asciitrans/: __init__.py
sockit/compare/: __init__.py
sockit/data/: __init__.py  abbreviations.json  acronyms.json  degrees.json  fields_of_study.json  index_skills.csv  index_soc4s.csv  index_socs.csv  lookup_acronyms.json  lookup_soc4_titles.json  lookup_soc_titles.json  managers.json  managers_trie.json  managers_trie_old.json  matrix_soc_skill.txt  model_soc4.txt  noun_list.txt  nouns_edited.txt  resume_headers.json  skill_idf_vector.txt  skills.json  soc6_titles.json  soc_topic_matrix.txt  topic_skill_matrix.txt  trie_alternative_titles.json  trie_job_titles_override.json  trie_schools.json  trie_skills.json  vector_skill_idf.txt
sockit/data/lookups/: acronyms.json
sockit/data/sets/: job_title_nouns.txt
sockit/data/tries/: nonskills.json
sockit/log/: __init__.py
sockit/parse/: __init__.py
sockit/re/: __init__.py
sockit/skillvector/: __init__.py
sockit/title/: __init__.py
test/: batch_recode.py  compare.py  description.json  hardcode.csv  scrape.py  socs-career-onestop.json  subtitles.json  test-comparison.csv  test-results-0.0.2.json  test-results-0.1.0.json  test-results-0.2.1.json  test-results-0.3.0.json  test-results-0.3.1.json  test.json  test.sh
test/job/: supervisor.html  teacher.txt
test/resume/: paralegal.docx  teacher.txt
test/title/: employees.csv  job_titles.json
testing/: matchscore_comparison.py
validation/: build_jobs.py  validate_jobs.py
validation/onet_db_27_0_text/: DWA Reference.txt  Occupation Data.txt  Task Statements.txt  Tasks to DWAs.txt
