[metadata]
name = sockit
author = Mark Howison
author_email = connect@ripl.org
url = https://github.com/ripl-org/sockit
version = attr: sockit.__version__
license = Free for non-commercial use
description = attr: sockit.__doc__
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    License :: Free for non-commercial use
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Information Analysis

[options]
install_requires = 
    chardet
    docx2txt
    html2text
    PyPDF2
    numpy >= 1.0.0
    scipy >= 1.0.0
    wordtrie >= 0.0.4
python_requires = >= 3.8
setup_requires = setuptools

[options.package_data]
    sockit = data/*.csv, data/*.json, data/*.txt

[options.entry_points]
console_scripts =
    sockit = sockit.__main__:main
